--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html>
 <head>
     <meta http-equiv="refresh" content="0; url="https://techtimego.notion.site/school" />
-    <title>Redirecting...</title>
-    <script>
-        window.location.href = "https://techtimego.notion.site/school";
-    </script>
+    <title>Tech Time Go School</title>
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://techtimego.notion.site/school">click here</a>.</p>
+    <p>Welcome to <a href="https://techtimego.notion.site/school">Tech Time Go School</a>!</p>
+    <img src="head.jpg" />
 </body>
 </html>
