--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url="https://techtimego.notion.site/school" />
     <title>Tech Time Go School</title>
+    <script>
+        window.location.href = "https://techtimego.notion.site/school";
+    </script>
 </head>
 <body>
     <p>Welcome to <a href="https://techtimego.notion.site/school">Tech Time Go School</a>!</p>
