--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Tech Time Go School</title>
+    <meta http-equiv="refresh" content="0; url="https://techtimego.notion.site/school" />
+    <title>Redirecting...</title>
     <script>
         window.location.href = "https://techtimego.notion.site/school";
     </script>
 </head>
 <body>
-    <p>Welcome to <a href="https://techtimego.notion.site/school">Tech Time Go School</a>!</p>
-    <img src="head.jpg" />
+    <p>If you are not redirected, <a href="https://techtimego.notion.site/school">click here</a>.</p>
 </body>
 </html>
