--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta http-equiv="refresh" content="0; url="https://techtimego.notion.site/school" />
+    <link rel="icon" type="image/x-icon" href="images/go_school.ico">
     <title>Redirecting...</title>
     <script>
         window.location.href = "https://techtimego.notion.site/school";
