--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
     <p>If you are not redirected, <a href="https://techtimego.notion.site/school">click here</a>.</p>
+    <p>To visit Tech Time Go Club, <a href="https://techtimego.notion.site/">click here</a>.</p>p
 </body>
 </html>
