--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url="https://techtimego.notion.site/school" />
+    <meta http-equiv="refresh" content="0; url="https://www.techtimego.org/school" />
     <link rel="icon" type="image/x-icon" href="images/go_school.ico">
     <title>Redirecting...</title>
     <script>
-        window.location.href = "https://techtimego.notion.site/school";
+        window.location.href = "https://www.techtimego.org/school";
     </script>
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://techtimego.notion.site/school">click here</a>.</p>
-    <p>To visit Tech Time Go Club, <a href="https://techtimego.notion.site/">click here</a>.</p>p
+    <p>If you are not redirected, <a href="https://www.techtimego.org/school">click here</a>.</p>
+    <p>To visit Tech Time Go Club, <a href="https://www.techtimego.org/">click here</a>.</p>p
 </body>
 </html>
